added learning for biases of output neurons

--- a/dlnd-your-first-neural-network.ipynb
+++ b/dlnd-your-first-neural-network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
        "4           1  0.24  0.2879  0.75        0.0       0           1    1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -376,7 +376,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -511,7 +511,7 @@
     "        #self.weights_input_to_hidden = np.random.uniform(-2.0, 2.0,(self.hidden_nodes, self.input_nodes))\n",
     "        \n",
     "        self.weights_hidden_to_output = np.random.normal(0.0, self.output_nodes**-0.5,(self.output_nodes, self.hidden_nodes)) \n",
-    "        self.biases_hidden_to_output = np.random.normal(1.5, 1.5,(self.output_nodes)) \n",
+    "        self.biases_output = np.random.normal(0.5, 1.0,(self.output_nodes)) \n",
     "        self.weights_input_to_output = np.random.normal(0.0, self.output_nodes**-0.5, (self.output_nodes, self.input_nodes))\n",
     "    \n",
     "    def train(self, inputs_list, targets_list):\n",
@@ -522,20 +522,21 @@
     "        #forward pass\n",
     "        hidden_inputs = np.dot(self.weights_input_to_hidden, inputs)\n",
     "        hidden_outputs = self.activation_function(hidden_inputs)\n",
-    "        final_inputs = np.dot(self.weights_hidden_to_output, hidden_outputs) + np.dot(self.weights_input_to_output, inputs) + self.biases_hidden_to_output\n",
+    "        final_inputs = np.dot(self.weights_hidden_to_output, hidden_outputs) + np.dot(self.weights_input_to_output, inputs) + self.biases_output\n",
     "        final_outputs = final_inputs\n",
     "        \n",
     "        #backward pass\n",
     "        output_errors = (targets - final_outputs)\n",
     "        self.weights_hidden_to_output += self.learning_rate * np.dot(output_errors, hidden_outputs.T)\n",
     "        self.weights_input_to_output += self.learning_rate * np.dot(output_errors, inputs.T)\n",
+    "        self.biases_output += output_errors[0][0] * self.learning_rate\n",
     "        \n",
     "    def run(self, inputs_list):\n",
     "        \n",
     "        inputs = np.array(inputs_list, ndmin=2).T\n",
-    "        hidden_inputs = np.dot(self.weights_input_to_hidden, inputs)\n",
+    "        hidden_inputs = np.dot(self.weights_input_to_hidden, inputs) \n",
     "        hidden_outputs = self.activation_function(hidden_inputs)\n",
-    "        final_inputs = np.dot(self.weights_hidden_to_output, hidden_outputs) + np.dot(self.weights_input_to_output, inputs) + self.biases_hidden_to_output\n",
+    "        final_inputs = np.dot(self.weights_hidden_to_output, hidden_outputs) + np.dot(self.weights_input_to_output, inputs) + self.biases_output\n",
     "        final_outputs = final_inputs\n",
     "        return final_outputs\n",
     "\n",
@@ -544,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -572,26 +573,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training MSE loss: 3.6752\n",
-      "Validation MSE loss: 3.7563\n",
-      "Training MSE loss: 0.3292\n",
-      "Validation MSE loss: 0.3432\n",
-      "Training MSE loss: 0.3408\n",
-      "Validation MSE loss: 0.3479\n",
-      "Training MSE loss: 0.3270\n",
-      "Validation MSE loss: 0.3465\n",
-      "Training MSE loss: 0.3334\n",
-      "Validation MSE loss: 0.3492\n",
-      "Training MSE loss: 0.3226\n",
-      "Validation MSE loss: 0.3387\n",
-      "Training MSE loss: 0.3224\n",
-      "Validation MSE loss: 0.3382\n",
-      "Training MSE loss: 0.3724\n",
-      "Validation MSE loss: 0.3874\n",
-      "Training MSE loss: 0.3193\n",
-      "Validation MSE loss: 0.3353\n",
-      "Training MSE loss: 0.3473\n",
-      "Validation MSE loss: 0.3618\n"
+      "Training MSE loss: 5.0915\n",
+      "Validation MSE loss: 5.0830\n",
+      "Training MSE loss: 0.3315\n",
+      "Validation MSE loss: 0.3334\n",
+      "Training MSE loss: 0.3486\n",
+      "Validation MSE loss: 0.3456\n",
+      "Training MSE loss: 0.3277\n",
+      "Validation MSE loss: 0.3318\n",
+      "Training MSE loss: 0.3422\n",
+      "Validation MSE loss: 0.3395\n",
+      "Training MSE loss: 0.3567\n",
+      "Validation MSE loss: 0.3501\n",
+      "Training MSE loss: 0.3204\n",
+      "Validation MSE loss: 0.3185\n",
+      "Training MSE loss: 0.3244\n",
+      "Validation MSE loss: 0.3284\n",
+      "Training MSE loss: 0.3361\n",
+      "Validation MSE loss: 0.3335\n",
+      "Training MSE loss: 0.3326\n",
+      "Validation MSE loss: 0.3240\n"
      ]
     }
    ],
